fix bug layout on IOS

--- a/assets/css/_sass/_post.scss
+++ b/assets/css/_sass/_post.scss
@@ -9,7 +9,6 @@ body {
 .header {
     position: relative;
     margin: 0 auto;
-    min-height: 560px;
     width: 100%;
     height: 100%;
     background-color: white;
@@ -117,7 +116,6 @@ button.trigger {
     font-size: 2em;
     cursor: pointer;
     @include animation_move();
-    -webkit-transition: opacity 0.3s 0.5s;
     transition: opacity 0.3s 0.5s;
 }
 
@@ -134,7 +132,6 @@ button.trigger::before {
     color: #fff;
     content: attr(data-info);
     font-size: 0.35em;
-    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
 
@@ -179,6 +176,9 @@ button.trigger:focus {
             transform: translateY(0);
             opacity: 1;
             margin-top: -200px;
+            @media (max-width: $screen-xs-max) {
+                margin-top: -150px;
+            }
         }
     }
 }
@@ -225,7 +225,6 @@ button.trigger:focus {
     left: 0;
     opacity: 0;
     pointer-events: none;
-    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
