--- a/assets/css/_sass/_typography.scss
+++ b/assets/css/_sass/_typography.scss
@@ -187,11 +187,12 @@ code {
 }
 
 hr {
-  border-color: #d5d5d5;
-  padding: 0;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
+  border: 0;
+  border-top: 1px solid #d5d5d5;
+  // padding: 0;
+  // border-top: 0;
+  // border-left: 0;
+  // border-right: 0;
   margin: $leading 0;
 }
 
